[package]
name = "actix-api-books"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }